src/objects/Business_Location_Attribute__c.object
<CustomObject>
    <description>Child object of Business Locations. Contains attributes for a Business Location. Examples of an attribute would be Opening Hours.</description>
    <fields>
        <fullName>Attribute_ID__c</fullName>
        <label>Attribute ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Type_Group__c</fullName>
        <label>Attribute Type Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <label>Attribute Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Value_1__c</fullName>
        <label>Attribute Value 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Value_2__c</fullName>
        <label>Attribute Value 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Location_Attribute_Compound_ID__c</fullName>
        <description>This is the compound key of the BLOM Attribute. It looks like BLOM ID:Attribute ID:Process ID:Product ID.</description>
        <externalId>true</externalId>
        <label>Business Location Attribute Compound ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Location__c</fullName>
        <label>Business Location</label>
        <referenceTo>Business_Location__c</referenceTo>
        <relationshipLabel>Business Location Attributes</relationshipLabel>
        <relationshipName>Business_Location_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <label>Process ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Business Location Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Location Attribute</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Location Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>